src/objects/FieloPLT__PointType__c.object
<CustomObject>
    <description>Different kind of Points. It enables creating exchange units based on distance, time, money, etc. instead of regular numeral Points.</description>
    <fields>
        <fullName>FieloPLT__MemberBalanceField__c</fullName>
        <description>Field API name which keeps track of the specific Point type balance on &quot;Members&quot;. It connects Point type with &quot;Members&quot;.</description>
        <inlineHelpText>Enter the API name of the field which keeps track of the Point type balance on &quot;Members&quot; (e.g. Miles__c).</inlineHelpText>
        <label>Member Balance field</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedemptionBalanceField__c</fullName>
        <description>Field API name which keeps track of the specific Point type balance on Redemptions. It connects Point type with &quot;Redemptions&quot;.</description>
        <inlineHelpText>Enter the API name of the field which keeps track of the Point type balance on &quot;Redemptions&quot; (e.g. Miles__c).</inlineHelpText>
        <label>Redemption Balance field</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedemptionItemBalanceField__c</fullName>
        <description>Field API name which keeps track of the specific Point type balance on &quot;Redemption Item&quot;. It connects Point type with &quot;Redemption Item&quot;.</description>
        <inlineHelpText>Enter the API name of the field which keeps track of the Point type balance on &quot;Redemption Item&quot; (e.g. Miles__c).</inlineHelpText>
        <label>Redemption Item Balance field</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardBalanceField__c</fullName>
        <description>Field API name which keeps track of the specific Point type balance on &quot;Rewards&quot;. It connects Point type with &quot;Rewards&quot;.</description>
        <inlineHelpText>Enter the API name of the field which keeps track of the Point type balance on &quot;Rewards&quot; (e.g. Miles__c).</inlineHelpText>
        <label>Reward Balance field</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TransactionBalanceField__c</fullName>
        <description>Field API name which keeps track of the specific Point type balance on &quot;Transactions&quot;. It connects Point type with &quot;Transactions&quot;.</description>
        <inlineHelpText>Enter the API name of the field which keeps track of the Point type balance on &quot;Transaction&quot; (e.g. Miles__c).</inlineHelpText>
        <label>Transaction Balance field</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Point Type</label>
    <nameField>
        <label>Point Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>